--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "daisyui": "^5.0.50",
+    "framer-motion": "^12.23.12",
     "mongodb": "^6.18.0",
     "next": "15.4.4",
     "react": "19.1.0",
