--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "daisyui": "^5.0.50",
     "framer-motion": "^12.23.12",
     "mongodb": "^6.18.0",
+    "motion": "^12.23.12",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
